Fixing text align center on footer

--- a/style.css
+++ b/style.css
@@ -83,3 +83,7 @@ header{
 header h1{
   display:inline;
 }
+
+#rights p{
+  text-align: center;
+}
